Correction du bug d'alignement des menus sur IE

--- a/public_html/styles/scss/_mixin.scss
+++ b/public_html/styles/scss/_mixin.scss
@@ -285,7 +285,7 @@ Contient les fonctions SCSS
     text-align: justify;
     width: 100%;
     max-width: $max-width + px;
-    font-size: 0;
+    line-height: 0;
     &:after{
         content: '';
         display: inline-block;
