--- a/public_html/styles/scss/_module.scss
+++ b/public_html/styles/scss/_module.scss
@@ -352,7 +352,7 @@ figure{
     ul{
         text-align: justify;
         width: 100%;
-        font-size: 0;
+        line-height: 0;
         &:after {
             content: '';
             display: inline-block;
