--- a/public_html/styles/scss/_state.scss
+++ b/public_html/styles/scss/_state.scss
@@ -52,7 +52,7 @@ Contient les media queries pour adapter les styles sur les différents formats
             text-align: justify;
             width: 100%;
             max-width: 600px;
-            font-size: 0;
+            line-height: 0;
             &:after {
                 content: '';
                 display: inline-block;
